2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* configure.ac: Don't enable libgd by default.
	  This makes gdk-pixbuf the default library for png output.
	
2007-04-21 Peter Clifton <pcjc2@cam.ac.uk>

	* src/m_basic.c: Fix visibility test in visible(..) for the case when the
	  object completely surrounds the screen clipping region.

	* src/o_circle_basic.c: Tidy up dist() function in o_circle_basic.c
	  to be much more readable.

2007-04-17 Peter Clifton <pcjc2@cam.ac.uk>

	Merge changes from noscreen
	
	2007-16-06 Peter Clifton <pcjc2@cam.ac.uk>

		* src/o_text_basic.c: Use o_text_recalc() to update bounds, as we don't
		  want to duplicate code. Fixes a bug where the bounds were reset manually
		  even with invisible text (causing uninitialised values to be stored in
		  for the object's bounds). Fixed o_text_recalc() to silently return
		  (rather than write uninitialised values) if no bound was found for the
		  text object's prim_objects.

	2007-12-06 Peter Clifton <pcjc2@cam.ac.uk>

		* src/f_image.c, src/f_print.c, src/g_smob.c, src/o_complex_basic.c,
		  src/o_pin_basic.c: Replace incorrect use of world_get_complex_bounds()
		  with world_get_object_list_bounds(). Changed o_complex_recalc() to
		  (correctly) use world_complex_get_bounds(). Fixed up documentation in
		  g_smob.c to reflect the current bounds code.

	2007-04-06 Peter Clifton <pcjc2@cam.ac.uk>

		* src/a_basic.c: Fix bounds for embedded objects as they are loaded from
		  file. This places a call to o_complex_recalc() in o_read(), which is
		  not great from an encapsulation point of view, but is the neatest solution
		  with the current method of loading embedded objects.

	2007-03-26 Peter Clifton <pcjc2@cam.ac.uk>

		* include/prototype.h, src/o_arc_basic.c, src/o_basic.c, src/o_box_basic.c,
		  src/o_bus_basic.c, src/o_circle_basic.c, src/o_line_basic.c,
		  src/o_net_basic.c, src/o_picture.c, src/o_pin_basic.c: Pass OBJECT instead